[metadata]
name = AdvancedCounter
version = 1.0.1
url = https://github.com/dstrohl/AdvancedCounter
license = GNU 3.0
author = Dan Strohl
author_email = dan@wjcg.net
description = Advanced counting helper class
long_description = file: README.rst
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries

packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where=src

